started navbar and some content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+* {
+font-family: Helvetica, sans-serif;
 
+}
+.navbar {
+display: flex;
+justify-content:space-around;
+width: 90%;
+height:50px;
+margin-left: 5%;
+margin-right: 5%;
+background:darkolivegreen;
+color:antiquewhite;
+align-items:center
+}
+a:link {
+padding: 10px;
+color:antiquewhite;
+text-decoration:none;
+align-items: center;
+}
+#logo {
+padding: 10px;
+font-size:large;
+align-items: left;
+}
+#links
+{
+display:flex;
+}
+.parttwo {
+display: flex;
+justify-content:center;
+width: 90%;
+height:50px;
+padding-top: 50px;
+padding-bottom: 50px;
+margin-left: 5%;
+margin-right: 5%;
+background:darkolivegreen;
+color:antiquewhite;
+align-items:center;
+}
+
+    </style>
+</head>
+<body>
+    <div class=navbar>
+        <div id='logo'>Cooleo Logo</div>
+        <div id='links'>
+        <a href='about.html'>Link One</a>
+        <a href='about.html'>Link Two</a>
+        <a href='about.html'>Link Three</a>
+    </div>
+    </div>
+    <div class='parttwo'>
+        <div class='twoleft'>
+        hello there
+        </div>
+        <div class='tworight'>
+        hello Three
+        </div>
+
+    </div>
+</body>
+</html>
